--- a/Solutions.tex
+++ b/Solutions.tex
@@ -1,5 +1,9 @@
 \documentclass[12pt]{article}
 \usepackage[fleqn]{amsmath}
+\usepackage{amsthm}
+\usepackage{amssymb}
+\usepackage{latexsym}
+\usepackage{enumerate}
 
 \setlength{\mathindent}{2.5cm}
 \topmargin-1cm
